RESOLVED FIXED116584
[Windows, curl] WebDownloadCurl.cpp should not include SystemTime.h
https://bugs.webkit.org/show_bug.cgi?id=116584
Summary [Windows, curl] WebDownloadCurl.cpp should not include SystemTime.h
Mark Salisbury
Reported 2013-05-21 17:03:14 PDT
In 150216, SystemTime header and implementations were removed. WebDownloadCurl.cpp still includes SystemTime.h.
Attachments
Proposed fix (1.07 KB, patch)
2013-05-21 17:08 PDT, Mark Salisbury
no flags
Proposed fix (1.07 KB, patch)
2013-05-21 17:17 PDT, Mark Salisbury
no flags
Mark Salisbury
Comment 1 2013-05-21 17:08:51 PDT
Created attachment 202479 [details] Proposed fix
Mark Salisbury
Comment 2 2013-05-21 17:17:51 PDT
Created attachment 202481 [details] Proposed fix Renamed patch file to match bug 3.
WebKit Commit Bot
Comment 3 2013-05-21 20:06:55 PDT
Comment on attachment 202481 [details] Proposed fix Clearing flags on attachment: 202481 Committed r150499: <http://trac.webkit.org/changeset/150499>
WebKit Commit Bot
Comment 4 2013-05-21 20:06:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.