[Windows, curl] WebDownloadCurl.cpp should not include SystemTime.h https://bugs.webkit.org/show_bug.cgi?id=116584

Patch by Mark Salisbury <mark.salisbury@hp.com> on 2013-05-21
Reviewed by Brent Fulgham.

SystemTime header and implementation are no longer used and were removed
recently - http://trac.webkit.org/changeset/150216.

* WebDownloadCurl.cpp:

Canonical link: https://commits.webkit.org/134900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150499 268f45cc-cd09-0410-ab3c-d52691b4dbfc