Source/WebKit/win/WebDownloadCurl.cpp
@@ -50,7 +50,6 @@
 #include <WebCore/ResourceHandle.h>
 #include <WebCore/ResourceRequest.h>
 #include <WebCore/ResourceResponse.h>
-#include <WebCore/SystemTime.h>
 
 using namespace WebCore;
 
